--- a/layout-events.twig
+++ b/layout-events.twig
@@ -23,6 +23,9 @@
                     <div class="c-events__main">
                         <div class="c-page-head c-page-head-xs">
                             <div class="u-heading__large u-heading__large-xs u-pr--6">{{this.title}}</div>
+                            {% if not _User.isGuest() %}
+                                <a href="{{networkData.defaultBlogUrl}}/event-form" class="c-page-head__link d-none d-md-flex">Submit an event</a>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
