--- a/static/sass/components/_component.form.scss
+++ b/static/sass/components/_component.form.scss
@@ -1,193 +1,250 @@
 .c-form {
-	&__group {
-		@include flexbox;
-		@include align-items(flex-start);
-		@include align-content(flex-start);
-		@include justify-content(flex-start);
-		@include flex-direction(column, vertical);
 
-		&:last-child,
-		&:only-child {
-			margin-bottom: 0px;
-		}
 
-		&--horizontal {
-			@include align-items(center);
-			@include flex-direction(row, horizontal);
-		}
-	}
+    &__group {
+        @include flexbox;
+        @include align-items(flex-start);
+        @include align-content(flex-start);
+        @include justify-content(flex-start);
+        @include flex-direction(column, vertical);
+        
+        &:last-child, &:only-child {
+            margin-bottom:0px;
+        }
 
-	&__input {
-		display: block;
-		width: 100%;
-		padding: 4px 0;
-		outline: 0;
-		border: 0;
-		border-bottom: 1px solid $offwhite;
-		@include font-size(13);
-		@include transition(all 0.3s ease-out);
-		line-height: 28px;
+        &--horizontal {
+            @include align-items(center);
+            @include flex-direction(row, horizontal);
+        }
 
-		&--bordered {
-			border: 1px solid $offwhite;
-			border-radius: 6px;
-			padding: 4px 8px;
-		}
+    }
 
-		&--inline {
-			@media #{$tablet-up} {
-				display: inline-block;
-			}
-			@media #{$tablet} {
-				width: 150px;
-			}
-			@media #{$desktop-up} {
-				width: 200px;
-			}
-		}
+    &__input {
+        display:block;
+        width:100%;
+        padding: 4px 0;
+        outline:0;
+        border:0;
+        border-bottom: 1px solid $grey4;
+        @include font-size(16);
+        @include transition(all .3s ease-out);
+        line-height:28px;
+        height: 48px;
 
-		&.formError {
-			border-color: $error;
+        &--bordered {
+            border: 1px solid $grey4;
+            padding: 4px 8px;
+        }
 
-			+ div {
-				display: block;
-			}
-		}
-	}
+        &--inline{
+            @media #{$tablet-up}{
+                display: inline-block;
+            }
+            @media #{$tablet}{
+                width: 150px;
+            }
+            @media #{$desktop-up}{
+                width: 200px;
+            }
+        }
+        
+        &--pointer {
+            cursor:pointer;
+            color: transparent;
+            text-shadow: 0 0 0 rgb(0 0 0 );
+        }
 
-	&__label {
-		width: 100%;
-		flex: 0 0 100%;
-		max-width: 100%;
-		color: $greyish;
-		margin-bottom: 7px;
-		@include font-size(14);
-		line-height: 1.5;
-		font-weight: $weightBold;
+        &.formError {
+            border-color:$error;
+            background:$error;
+            color:white;
 
-		&__popuplink {
-			@include font-size(11);
-			line-height: 2;
-			float: right;
-			color: $greyish;
-			text-decoration: underline;
-			cursor: pointer;
-		}
-	}
+            + div {
+                display:block;
+            }
+        }
 
-	&__help-block {
-		display: none;
-		@include font-size(12);
-		color: $error;
-		padding-left: 5px;
-	}
+    }
 
-	&__buttons {
-		@include flexbox();
-		// @include flex-direction(row, horizontal);
-		@include justify-content(center);
-		margin-top: 50px;
+    &__textarea {
+        border: 1px solid $grey4;
+        padding: 4px 8px;
+        height: 150px;
+        width: 100%;
+        
+        &.formError {
+            border-color:$error;
+            background:$error;
+            color:white;
 
-		&--left {
-			@include justify-content(flex-start);
-		}
-	}
+            + div {
+                display:block;
+            }
+        }
 
-	&__checkbox {
-		&[type="radio"],
-		&[type="checkbox"] {
-			margin: 0;
-			height: 1px;
-			@include padding(0);
-			@include opacity(0);
-			position: absolute;
-			pointer-events: none;
-		}
-		&[type="radio"] + span,
-		&[type="checkbox"] + span {
-			@include size(20px);
-			text-align: center;
-			display: inline-block;
-			background-color: $white;
-			border: 1px solid $border;
-			vertical-align: text-bottom;
-			position: relative;
-			margin-right: 6px;
-			@include transition(all 0.1s ease);
-			@include border-radius(6px);
-		}
-		&[type="radio"] + span {
-			top: 1.5px;
-		}
-		&[type="checkbox"] + span {
-			top: 1.5px;
-		}
-		&[type="radio"] + span::after,
-		&[type="checkbox"] + span::after {
-			content: "";
-			display: inline-block;
-			@include opacity(0);
-			width: 100%;
-			position: absolute;
-			top: 0;
-			left: 0;
-			height: 100%;
-			@include transition(all 0.1s ease);
-		}
-		&[type="radio"]:focus + span,
-		&[type="checkbox"]:focus + span,
-		&[type="radio"]:active + span,
-		&[type="checkbox"]:active + span {
-			border-color: $success;
-		}
-		&[type="radio"]:checked + span::after,
-		&[type="checkbox"]:checked + span::after {
-			@include opacity(1);
-		}
-		&[type="radio"].error + span,
-		&[type="checkbox"].error + span {
-			border-color: $error;
-		}
-		&[type="radio"] {
-			+ span {
-				@include border-radius(6px);
+    }
 
-				&::after {
-					@include border-radius(4px);
-					background-color: $mainColor;
-					border-color: $mainColor;
-				}
-			}
-			&:checked + span {
-				border: 1px solid $mainColor;
-				@include transition(all 0.1s ease);
-			}
-		}
-		&[type="radio"]:checked + span::after {
-			border: 2px solid $white;
-			@include border-radius(6px);
-		}
+    &__label {
+        width:100%;
+        max-width:100%;
+        color: $black;
+        margin-bottom:7px;
+        @include font-size(16);
+        line-height:1.5;
+        font-weight:$weightRegular;
+        
+        // &__popuplink{
+        //     @include font-size(11);
+        //     line-height: 2;
+        //     float: right;
+        //     color: $greyish;
+        //     text-decoration: underline;
+        //     cursor: pointer;
+        // }
 
-		&[type="checkbox"] {
-			+ span {
-				@include border-radius(6px);
+    }
 
-				&::after {
-					@include border-radius(4px);
-					background-color: $mainColor;
-					border-color: $mainColor;
-				}
-			}
-			&:checked + span {
-				border: 1px solid $mainColor;
-				@include transition(all 0.1s ease);
-			}
-		}
-		&[type="checkbox"]:checked + span::after {
-			border: 2px solid $white;
-			@include border-radius(6px);
-		}
-	}
+    &__help-block {
+        display:none;
+        @include font-size(12);
+        color:$error;
+        padding-left: 5px;
+
+    }
+
+    &__buttons {
+        @include flexbox();
+        // @include flex-direction(row, horizontal);
+        @include justify-content(center);
+        margin-top: 50px;
+
+        &--left {
+            @include justify-content(flex-start);
+        }
+    }
+   
+    &__error {
+        font-weight:bold;
+        color:$error;
+    }
+
+    &__checkbox {
+
+        &[type="radio"], &[type="checkbox"] {
+            margin:0;
+            height:1px;
+            @include padding(0);
+            @include opacity(0);
+            position:absolute;
+            pointer-events:none;
+        }
+        &[type="radio"] + span, &[type="checkbox"] + span {
+            @include size(20px);
+            text-align:center;
+            display:inline-block;
+            background-color:$white;
+            border:1px solid $border;
+            vertical-align:text-bottom;
+            position:relative;
+            margin-right:6px;
+            @include transition(all 0.1s ease);
+            @include border-radius(6px);
+        }
+        &[type="radio"] + span {
+            top:1.5px;
+        }
+        &[type="checkbox"] + span {
+            top:1.5px;
+        }
+        &[type="radio"] + span::after, &[type="checkbox"] + span::after {
+            content:"";
+            display:inline-block;
+            @include opacity(0);
+            width:100%;
+            position:absolute;
+            top:0;
+            left:0;
+            height:100%;
+            @include transition(all 0.1s ease);
+        }
+        &[type="radio"]:focus + span, &[type="checkbox"]:focus + span, &[type="radio"]:active + span, &[type="checkbox"]:active + span {
+            border-color:$success;
+        }
+        &[type="radio"]:checked + span::after, &[type="checkbox"]:checked + span::after {
+            @include opacity(1);
+        }
+        &[type="radio"].error + span, &[type="checkbox"].error + span {
+            border-color:$error;
+        }
+        &[type="radio"] {
+            + span {
+                @include border-radius(6px);
+
+                &::after {
+                    @include border-radius(4px);
+                    background-color:$mainColor;
+                    border-color:$mainColor;
+                }
+            }
+            &:checked + span {
+                border:1px solid $mainColor;
+                @include transition(all 0.1s ease);
+            }
+        }
+        &[type="radio"]:checked + span::after {
+            border:2px solid $white;
+            @include border-radius(6px);
+        }
+
+        &[type="checkbox"] {
+            + span {
+                @include border-radius(6px);
+
+                &::after {
+                    @include border-radius(4px);
+                    background-color:$mainColor;
+                    border-color:$mainColor;
+                }
+            }
+            &:checked + span {
+                border:1px solid $mainColor;
+                @include transition(all 0.1s ease);
+            }
+        }
+        &[type="checkbox"]:checked + span::after {
+            border:2px solid $white;
+            @include border-radius(6px);
+        }
+    }
+
+
+}
+
+.c-upload-image {
+    width: 100%;
+    @include flexbox;
+    @include flex-direction(column,vertical);
+    @include align-items(center);
+    @include justify-content(center);
+    height: 56px;
+    border: 1px dotted $black;
+
+    &__label {
+        @include flexbox;
+        @include align-items(center);
+        @include justify-content(center);
+        @include font-size(22);
+        line-height: 1.09;
+        height:100%;
+        width:100%;
+        font-weight: $weightLight;
+        color: $black;
+        cursor:pointer;
+        &:hover {
+            background:black;
+            color:white;
+        }
+    }
 }
 
 .c-generic-form {
