--- a/render.twig
+++ b/render.twig
@@ -49,6 +49,7 @@
         site            : site,
         networkData     : networkData,
         blogData        : blogData,
+        blogLayout      : config.blogLayout is defined ? config.blogLayout : '',
         background      : config.background is defined ? config.background : '',
         adslots         : config.adslots is defined ? config.adslots : [],
         timeSuppress    : config.timeSuppress is defined ? config.timeSuppress : false
