--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -121,6 +121,7 @@
 @import "acme-card";
 @import "acme-card-1";
 @import "acme-card-2";
+@import "acme-card-3";
 @import "acme-card-10";  // classifieds lightbox
 
 
