--- a/partials/_single-article.twig
+++ b/partials/_single-article.twig
@@ -19,6 +19,8 @@
 {% set forceVideo = false %}
 {% set params = url['query'] %}
 
+{% set blogData     = _Blog.getBlog() %}
+
 {#remove all images if url param set#}
 
 {% set premiumSuppress = false %}
@@ -283,7 +285,8 @@
         <article class="{{cardType}}c-cards-view {{params.social == 0 ? "" : "social"}} {{params.category}} {{params.hasMediaClass}} {{lightbox}} {{contentType}} {{params.status}}">
             {{ this.render('_article-' ~ template ~ '.twig', {
                 params:params, 
-                networkData: networkData
+                networkData: networkData,
+                blogData: blogData
             } ) | raw }}
         </article>
 
