--- a/static/sass/cards/_card.scss
+++ b/static/sass/cards/_card.scss
@@ -56,6 +56,10 @@
         position: relative;
         height: 100%;
 
+        .classified_category {
+            display: none;
+        }
+
         &.draft {
             opacity: 0.3;
         }
