--- a/section.twig
+++ b/section.twig
@@ -1,12 +1,11 @@
 {{ set(this, 'title', _Blog.getBlogTitle()) }}
-{% set blogData     = _Blog.getBlog() %}
-
+{% set blogData     = _Blog.getBlog(null, {'excludeMenus' : true}) %}
 {# {% cache 'section_1' 300 %} #}
 
 
 {% set networkData = _Network.getNetworkData() %}
 {% set site        = networkData.title | lower | split(" ")[0]%}
-{% set config       = _Network.getThemeConfig() %}
+{% set config      = _Network.getThemeConfig() %}
 
 
 {{ set(this, 'params', {
