--- a/layout-article-image-top.twig
+++ b/layout-article-image-top.twig
@@ -4,13 +4,13 @@
 
 
 {% set networkData  = _Network.getNetworkData() %}
-{% set blogInfo     = _Blog.getBlog() %}
+{% set blogInfo     = _Blog.getBlog(null, {'excludeMenus' : true}) %}
 {% set config       = _Network.getThemeConfig() %}
 
 {% set relatedArticles = [] %}
 {% set articleBlog = article.blog.title | lower %}
 
-{% set articleBlogInfo = _Blog.getBlog({'guid':article.blog['guid']}) %}
+{% set articleBlogInfo = _Blog.getBlog({'guid':article.blog['guid']}, {'excludeMenus' : true}) %}
 
 
 {% set showPaywall = false %}
