--- a/layout-event-form.twig
+++ b/layout-event-form.twig
@@ -9,7 +9,7 @@
 
 
 {% set networkData = _Network.getNetworkData() %}
-{% set blogData    = _Blog.getBlog() %}
+{% set blogData     = _Blog.getBlog(null, {'excludeMenus' : true}) %}
 {% set eventBlogId  = blogData.additionalInfo['publishto'] %}
 {% set limit = 10 %}
 
