--- a/layout-gallery.twig
+++ b/layout-gallery.twig
@@ -7,7 +7,8 @@
 
 {% set limit = 14 %}
 
-{% set blogData     = _Blog.getBlog() %}
+{% set blogData = _Blog.getBlog(null, {'excludeMenus' : true}) %}
+
 {% set articlesArr = _Blog.getBlogFeed({'limit': limit, 'offset': 0}) %}
 {% set articles = articlesArr.articles %}
 {% set firstCount = articles | length %}
