--- a/layout-paywall.twig
+++ b/layout-paywall.twig
@@ -1,6 +1,7 @@
 {% set networkData  = _Network.getNetworkData() %}
 {% set plans        = _Paywall.getActiveNetworkPaywallPlans() %}
-{% set blogData		= _Blog.getBlog() %}
+{% set blogData     = _Blog.getBlog(null, {'excludeMenus' : true}) %}
+
 {% set blogName     = blogData.title %}
 {% set config       = _Network.getThemeConfig() %}
 
