classified layout 2 fixes

--- a/static/sass/cards/_acme-card-2.scss
+++ b/static/sass/cards/_acme-card-2.scss
@@ -49,6 +49,14 @@
 
 }
 
+.acme-card-2-mobile {
+    @media #{$mobile} {
+        @include card-name("acme 2 mobile");
+        @include acme-card-2-base();
+
+    }
+}
+
 .acme-card-2-tablet {
     @media #{$tablet} {
         @include card-name("acme 2 tablet");
