--- a/section-digital.twig
+++ b/section-digital.twig
@@ -41,7 +41,18 @@
                 {{this.render('partials/_single-article.twig', {
                     article: articles[articleCount], 
                     position: (articleCount+1),
-                    imageSize: {width: 600, height: 900, medWidth: 235, medHeight: 319, smlWidth: 235, smlHeight: 319 },
+                    imageSize: {width: 600, height: 900},
+                    imageSizes: {
+                        "mobile": {
+                            width: 235, height: 319
+                        },
+                        "mobileLrg": {
+                            width: 235, height: 319
+                        },
+                        "tablet": {
+                            width: 235, height: 319
+                        }
+                    },
                     containerClass: "card-11-mobile card-11-tablet card-11-desktop card-11-highlighter"
                 }) | raw}}
                 {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
@@ -51,7 +62,18 @@
                     {{this.render('partials/_single-article.twig', {
                         article: articles[articleCount], 
                         position: (articleCount+1),
-                        imageSize: {width: 600, height: 900, medWidth: 235, medHeight: 319, smlWidth: 235, smlHeight: 319 },
+                        imageSize: {width: 600, height: 900},
+                        imageSizes: {
+                            "mobile": {
+                                width: 235, height: 319
+                            },
+                            "mobileLrg": {
+                                width: 235, height: 319
+                            },
+                            "tablet": {
+                                width: 235, height: 319
+                            }
+                        },
                         containerClass: "card-11-mobile card-11-tablet card-11-desktop"
                     }) | raw}}
                     {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
