digital layout fixes

--- a/section-digital.twig
+++ b/section-digital.twig
@@ -42,6 +42,17 @@
                     article: articles[articleCount], 
                     position: (articleCount+1),
                     imageSize: {width: 600, height: 900},
+                        imageSizes: {
+                            "mobile": {
+                                width: 235, height: 319
+                            },
+                            "mobileLrg": {
+                                width: 235, height: 319
+                            },
+                            "tablet": {
+                                width: 235, height: 319
+                            }
+                        },
                     containerClass: "card-11-mobile card-11-tablet card-11-desktop card-11-highlighter"
                 }) | raw}}
                 {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
@@ -52,6 +63,17 @@
                         article: articles[articleCount], 
                         position: (articleCount+1),
                         imageSize: {width: 600, height: 900},
+                        imageSizes: {
+                            "mobile": {
+                                width: 235, height: 319
+                            },
+                            "mobileLrg": {
+                                width: 235, height: 319
+                            },
+                            "tablet": {
+                                width: 235, height: 319
+                            }
+                        },
                         containerClass: "card-11-mobile card-11-tablet card-11-desktop"
                     }) | raw}}
                     {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
@@ -73,6 +95,17 @@
                                 article: articles[articleCount], 
                                 position: (articleCount+1),
                                 imageSize: {width: 600, height: 900},
+                                imageSizes: {
+                                    "mobile": {
+                                        width: 235, height: 319
+                                    },
+                                    "mobileLrg": {
+                                        width: 235, height: 319
+                                    },
+                                    "tablet": {
+                                        width: 235, height: 319
+                                    }
+                                },
                                 containerClass: "card-11-mobile card-11-tablet card-11-desktop"
                             }) | raw}}
                             {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
